# Delafossite-Workflow

./: README.md  README.md~  Workflow_Guide.md  pyproject.toml
src/delafossite_wf/: Calc_Evac.py  MagMom_recursive.py  PDOS_plotter.py  bands_incar_params.txt  bands_input.py  createPDOS.py  custom_incar_params.txt  err_check.py  get_bandgap.py  get_e_pristine.py  integrate_pdos.py  intialize.py  main.py  modINCAR.py  pdos_INCARmod.py  remove_pairs.py  removed_pairs_INCARmod.py  wf_update.py
src/delafossite_wf/example_files/: SpinPairs.txt
src/delafossite_wf/old-submit-scripts/: submitadsorption-vasp.sh
tests/wf-test/: Co_pairs.txt  Li_pairs.txt  Mods.txt  O_pairs.txt
tests/wf-test/Modification_1/: POSCAR_modified_1.vasp  POSCAR_modified_1_MAGMOM.txt
tests/wf-test/Modification_1/VASP_inputs/: INCAR  POSCAR  POTCAR
tests/wf-test/Modification_1/VASP_inputs/O_Pairs_Removed/: INCAR  POSCAR_removed_O_Pairs.vasp  POSCAR_removed_O_Pairs_MAGMOM.txt
